fixed CSS issue causing canvas to overflow

--- a/src/components/dynamic-lake-background/dynamic-lake-background.module.scss
+++ b/src/components/dynamic-lake-background/dynamic-lake-background.module.scss
@@ -12,3 +12,11 @@
   position: absolute;
   bottom: 15%;
 }
+
+.canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
