--- a/src/styles/pages/_404.scss
+++ b/src/styles/pages/_404.scss
@@ -2,6 +2,7 @@
   @extend %page;
   background-color: $bg-shade-1;
   position: relative;
+  overflow-x: unset;
 
   &__content {
     position: relative;
